# aws-lab

./: README.md  infracost_mcp.py  mcp-config-snippet.json  prompt  pyproject.toml
.kiro/hooks/: terraform-cost-calculation.kiro.hook  update-terraform-readme.kiro.hook
.kiro/powers/infracost-estimator/: POWER.md  mcp.json
.kiro/scripts/infracost-estimator/: infracost.py
.kiro/specs/iot-tilt-sensor-system/: design.md  requirements.md  tasks.md
.kiro/specs/spec-hooks-steering-mcp/: design.md  requirements.md  tasks.md
.kiro/specs/spec-hooks-steering-mcp/terraform/: .gitignore  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md  alb.tf  asg.tf  backend.tf.example  main.tf  outputs.tf  rds.tf  terraform.tfvars.example  variables.tf  versions.tf
.kiro/specs/spec-only/: design.md  requirements.md  tasks.md
.kiro/steering/: diagram.md  general.md  terraform.md
local-mcp-server/: infracost_mcp.py
spec-only/terraform/: DOCUMENTATION_VERIFICATION.md  README.md  alb.tf  asg.tf  main.tf  outputs.tf  rds.tf  terraform.tfvars.example  variables.tf
spec-only/terraform/.infracost/: pricing.gob
spec-only/terraform/.infracost/terraform_modules/: manifest.json
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
terraform/modules/vpc/: README.md  main.tf  outputs.tf  variables.tf
test-cost/: main.tf
test-cost/.infracost/: pricing.gob
test-cost/.infracost/terraform_modules/: manifest.json
